--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Brendan
-middle_name: M
+middle_name: 
 last_name: Cirillo
 email: cirilo.brendan@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
