--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,12 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Brendan
 middle_name: 
 last_name: Cirillo
-email: cirilo.brendan@gmail.com
+email: cirillo.brendan@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⛰️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -133,8 +132,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Brendan Cirillo # blog_name will be displayed in your blog page
+blog_description: Website, Blog, and CV
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
