chaning repo and git hub user :(

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,8 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - AboutBC
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - AboutBC/AboutBC.github.io
+  - AboutBC/fantasy_football_ml
